--- a/angular.json
+++ b/angular.json
@@ -74,7 +74,11 @@
                   "maximumError": "4kb"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "index": {
+                "input": "src/index.build.html",
+                "output": "index.html"
+              }
             },
             "development": {
               "buildOptimizer": false,
